# web-server

./: 404.html  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
src/: main.rs
