[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
# For https://lib.rs/crates/thread_local
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
tracing = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["std", "fmt"]
